k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plateforme-j2ee
  labels:
    app: plateforme
spec:
  replicas: 1  # Commencer avec 1 seul pod pour debug
  selector:
    matchLabels:
      app: plateforme
  template:
    metadata:
      labels:
        app: plateforme
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: plateforme
          image: ayaah123/projet-j2ee-signalement:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 180  # 3 minutes pour laisser Flyway migrer
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 150  # 2.5 minutes
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
